Updated Online Resume

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class='hero-unit' id='hero'>
 		<h1> Jean Caillé </h1>
 		<p> Student and aspiring entrepreneur at Ecole Polytechnique. </p>
-		<p> I'm currently looking for a <strong> part time developper job in Paris, France, starting in October 	2013.</strong>
+		<p> I'm currently looking for a <strong> 5 to 6 months internship starting in July 2014.</strong>
 			<br>
 			Send me an email at jean.caille [a] polytechnique.edu
 		</p>
@@ -23,7 +23,7 @@
 				<img class='img-circle' src='img/headshot.jpg' id='myPicture'>
 			</div>
 			<div class='span9'>
-				<p><strong> Hi ! </strong> My name is Jean, I'm a third year student at the Ecole Polytechnique near Paris, France. Currently majoring in computer science, I'm thorouglhy interested in <strong>startups</strong>, and have up to know worked on several school and side projects related to entrepreneurship. I'm currently in the market for a <strong>part time devlopper job</strong> in Paris, France, starting in October 2013. </p>
+				<p><strong> Hi ! </strong> My name is Jean, I'm a fourth year student at the Ecole Polytechnique near Paris, France. Currently majoring in computer science, I'm thorouglhy interested in <strong>startups</strong>, and have up to know worked on several school and side projects related to entrepreneurship. I'm currently looking for a 5 to 6 month internship, starting in July 2014.<p>
 				<p>Here, you'll find a short description of the <a href='#projectAnchor'>projects</a> i've been working on recently, as well as my skills and past work experiences.</p>
 				<hr>
 				<div class='row'>
@@ -46,13 +46,43 @@
 		<ul class='thumbnails'>
 			<li class='span12'>
 				<div class='thumbnail'>
+					<div class="row" id="video-row">
+						<video controls class='span6 offset3'>
+  						<source src="img/StabFat.mp4" type="video/mp4">
+						Your browser does not HTML5 video.
+					</video>	
+					</div>
+
+
+					<h3> Stupeflix <small> Intern and Part-Time Developper at Stupeflix </small></h3>
+					<div class='row-fluid'>
+						<div class='span6'>
+							<h4> The company : </h4>
+							<p>
+								<a href="http://stupeflix.com">Stupeflix</a> is a 4 year old French startup that wants it easy to create gorgeous video. We offer a web service, and API and a iPhone app that will allow anyone to create masterpiece in just a few clicks / calls / gestures. <a href="http://replayapp.com">Replay</a>, the iPhone app has been in the work for many month and is coming out Christmas 2013.
+							</p>
+						</div>
+						<div class='span6'>
+							<h4> What I do : </h4>
+							<p>
+								As an intern, I developped and integrated in Replay a video stabilization algorithm that works real-time at playback. To achieve this speed, we use informations from the gyroscope to stabilize the video. You can see a demonstration of this algorithm above.
+								I am now working part time at Stupeflix, creating computer-visions tools in order to answer questions such as <i> Where are the important point of this image ? </i> or <i> What color would work well with this video ?</i>
+							</p>
+						</div>
+					</div>
+				</div>
+			</li>
+		</ul>	
+		<ul class='thumbnails'>
+			<li class='span12'>
+				<div class='thumbnail'>
 					<img src='img/smartrent.png' class='img-rounded'>
 					<h3> SmartRent <small> Winning Project of Startup-Weekend Paris - 2013 </small></h3>
 					<div class='row-fluid'>
 						<div class='span6'>
 							<h4> The project : </h4>
 							<p>
-								SmartRent is a Startup-weekend project. With a team of 8 (5 business / 3 dev), we developped and pitched a buisness idea : <strong>renting furniture to students in Paris</strong>. In 54 hours, we created a full business plan, did customer validation and developped the <a href='http://www.thesmartrent.co'>website</a>. We ultimately were awarded first prize in the Startup-Weekend competition. We are currently looking at ways to continue this project with the help of an incubator.
+								SmartRent is a Startup-weekend project. With a team of 8 (5 business / 3 dev), we developped and pitched a buisness idea : <strong>renting furniture to students in Paris</strong>. In 54 hours, we created a full business plan, did customer validation and developped the <a href='http://www.thesmartrent.co'>website</a>. We ultimately were awarded first prize in the Startup-Weekend competition. Unfortunately, I could not carry on with the project due to various reasons.
 							</p>
 						</div>
 						<div class='span6'>
@@ -147,17 +177,18 @@
 						<h5>.py</h5>
 					</div>
 
-					<div class='span1 skill' rel='popover' title ='Web Developement' data-content='HTML5 + CSS3 + Javacript. <br> Developped multiple websites using libraries and framework such as jquery and bootstrap. <br>Currently learning Django.' data-placement='bottom' data-trigger='hover'>
-						<h5>.php</h5>
+					<div class='span1 skill' rel='popover' title ='C++' data-content='Main language used at Stupeflix, good knowledge of C++ with an occasional bit of C.' data-placement='bottom' data-trigger='hover'>
+						<h5>.cpp</h5>
+					</div>
+
+					<div class='span1 skill' rel='popover' title ='Objective C and Cocoa' data-content="Used at Stupeflix  for prototyping and developping iPhone frameworks and applications. Working knowledge of Apple Frameworks, such as Accelerate or CoreMotion" data-placement='bottom' data-trigger='hover'>
+						<h5>.m</h5>
 					</div>
 
 					<div class='span1 skill' rel='popover' title ='Java' data-content='Used primarily in school as a learning tool. <br> Familliar with most concept of OO-Programming. <br>' data-placement='bottom' data-trigger='hover'>
 						<h5>.java</h5>
 					</div>
 
-					<div class='span1 skill' rel='popover' title ='C++' data-content='Used as a tool during a couple of school-projects. Working knowledge of pointers and memory management.' data-placement='bottom' data-trigger='hover'>
-						<h5>.cpp</h5>
-					</div>
 				</div>
 			</div>
 			<div class='span3 skillSet'>
@@ -172,7 +203,7 @@
 						<h5>GL</h5>
 					</div>
 
-					<div class='span1 skill' rel='popover' title ='OpenCV' data-content='Basic knowledge of OpenCV tools.' data-placement='bottom' data-trigger='hover'>
+					<div class='span1 skill' rel='popover' title ='OpenCV' data-content='Working knowledge of OpenCV framework and tools.' data-placement='bottom' data-trigger='hover'>
 						<h5>CV</h5>
 					</div>
 				</div>
@@ -189,7 +220,7 @@
 						<h5>Am7#</h5>
 					</div>
 
-					<div class='span1 skill' rel='popover' title ="Improv'" data-content='Member of the Ecole Polytechnique Improvisational theatre team.' data-placement='bottom' data-trigger='hover'>
+					<div class='span1 skill' rel='popover' title ="Improv'" data-content="I'm a member of the Parisian improv group <i>La compagnie On/Off</i>" data-placement='bottom' data-trigger='hover'>
 						<h5>:-O</h5>
 					</div>
 				</div>
@@ -205,11 +236,20 @@
 				<hr>
 				<div class='row'>
 					<div class='span2'>
-						<h4>2010 - 2013</h4>
+						<h4>2013 - 2014</h4>
+					</div>
+					<div class='span4'>
+						<h3> Télécom Paristech </h3>
+						<p>Following a double-diploma in Computer Science, with a particular interest in Computer Vision and Computer Graphics.</p>
+					</div>
+				</div>
+				<div class='row'>
+					<div class='span2'>
+						<h4>2010 - 2014</h4>
 					</div>
 					<div class='span4'>
 						<h3> Ecole Polytechnique </h3>
-						<p>Currently in third-year at France’s leading university for high-level scientific training. Majoring in <strong>Computer Science</strong> and Computer Vision.</p>
+						<p>Currently in fourth-year at France’s leading university for high-level scientific training. Majoring in <strong>Computer Science</strong> and Computer Vision.</p>
 					</div>
 				</div>
 				<div class='row'>
@@ -221,26 +261,17 @@
 						<p>Two year intensive undergraduate program in <strong>mathematics, physics and engineering</strong> in preparation for the nationwide competitive examinations to the French Grandes Ecoles.</p>
 					</div>
 				</div>
-				<div class='row'>
-					<div class='span2'>
-						<h4>2006 - 2008</h4>
-					</div>
-					<div class='span4'>
-						<h3> Lycée Joliot-Curie </h3>
-						<p>French secondary school diploma in mathematics and physics. Graduated with <strong>high honors, and English-language European section honors.</strong></p>
-					</div>
-				</div>
 			</div>
 			<div class='span6'>
 				<h2> Work Experience </h2>
 				<hr>
 				<div class='row'>
 					<div class='span2'>
-						<h4>3/2013 - Now</h4>
+						<h4>2013 - Now</h4>
 					</div>
 					<div class='span4'>
 						<h3> Stupeflix </h3>
-						<p>Currently interning for a Five month research internship at a French Startup providing an online video making tool. Working on iPhone <strong>video stabilization</strong> and interpolation using gyroscope data.</p>
+						<p>Currently working part-time after a five month research internship at providing an online video making tool. Working on iPhone <strong>video stabilization</strong> and interpolation using gyroscope data, as well as general purpose computer vision tools.</p>
 						</div>
 					</div>
 					<div class='row'>
