--- a/savr/index.html
+++ b/savr/index.html
@@ -102,7 +102,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Spruce up your Screensaver</h2>
-                    <a href="Savr.app" download="Savr.app" class="btn btn-default btn-lg">Get Savr</a>
+                    <a href="http://sourceforge.net/projects/savr/files/latest/download" download="Savr.app" class="btn btn-default btn-lg">Get Savr</a>
                 </div>
             </div>
         </div>
